@@ -65,3 +65,8 @@ SVN 530 (1.9.3)
 - Change bottom info bar content to the component default one
 - Activate variable CPUs count with the option -vc
 - Improve Fan bottom info
+SVN 531 (1.9.4)
+- Fix time info
+- Improve Fan / Temperature Screens leading labels position
+- Improve Fan / Temperature Screens height calculation
+- Improve Summary Screen multi bar (temperature and network)
